[package]
name = "rust-practical-combat"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
clap = "2"
graphics = "0.3.0"
num = "0.4.3"
piston2d-graphics = "0.45.0"
piston_window = "0.132.0"
rand = "0.8.5"
serde = "1.0.216"
serde_cbor = "0.11.2"
serde_derive = "1.0.216"
serde_json = "1.0.133"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.9"
